# autonomous-code-improver

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  e2e.yml  security.yml
agent/: cli.py
agent/analysis/: __init__.py  dynamic_pipeline.py  mutation.py  static_pipeline.py
agent/brains/: __init__.py  innovator.py
agent/core/: __init__.py  models.py
agent/graph/: __init__.py  service.py
agent/ingestion/: __init__.py  clone.py  indexer.py  parser.py
agent/llm/: __init__.py  client.py  config.py  factory.py  prompt_templates.py  utils.py
agent/llm/tests/: test_llm_client.py  test_prompt_templates.py
agent/memory/: __init__.py  store.py
agent/modify/: __init__.py  apply.py  planner.py
agent/pr/: __init__.py  gh.py
agent/runtime/: __init__.py  orchestrator.py
agent/utils/: __init__.py  logging.py
agent/verify/: __init__.py  runner.py
docs/adrs/: 0001-assumptions.md
infra/nats/: docker-compose.yml
infra/neo4j/: docker-compose.override.yml  init.cypher
infra/postgres/: docker-compose.yml
infra/redis/: docker-compose.yml
scripts/: dev.sh  doctor.py  run-e2e.sh  seed.sh  wait-for-services.sh
tests/: test_analysis_static_pipeline.py  test_graph_service.py  test_ingestion_clone.py  test_ingestion_indexer.py  test_ingestion_parser.py  test_llm_client.py
ui/: next.config.js  package.json
ui/src/components/: Dashboard.tsx  FindingsList.tsx  JobStatus.tsx  RepositoryForm.tsx
ui/src/pages/: index.tsx
ui/src/types/: index.ts
